terraform-eks-helming-hpa-ca-alb-ingress/k8s-manifests/apps/sample-app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-app
spec:
  selector:
    app: sample-app
  ports:
    - name: sample-app
      port: 80
      targetPort: 80
  type: NodePort
